# ShakFinder

./: .gitignore  .gitmodules  CMakeLists.txt
ShakFinder/: CMakeLists.txt  ShakFinder.cpp  ShakFinder.h
ShakFinder/Engine/: Board.hpp  Constants.hpp  Fumen.hpp  Game.cpp  Game.hpp  Parser.cpp  Piece.cpp  Piece.hpp  Solver.cpp  Solver.hpp
ShakFinder/Engine/GameRules/: jstris_score.hpp  tetrio.hpp
ShakFinder/Solver/: Fumen.hpp  Parser.cpp  Parser.hpp  Solver.cpp  Solver.hpp  Util.hpp
ShakFinder/Solver/GameRules/: jstris_score.hpp  tetris_points.hpp
